<?xml version="1.0"?>
<package format="2">
  <name>ca_msgs</name>
  <version>0.0.1</version>
  <description>scout collision avoidance msgs</description>

  <maintainer email="swha@morai.ai">Sangwook Ha</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

</package>
